fix double submit enter key for add playlist, fix not showing first playlist, edit font coloring

--- a/static/css/final.css
+++ b/static/css/final.css
@@ -728,6 +728,9 @@ a {
   background-color:#181F24;
   cursor:pointer;
 }
+#playlistRemove {
+  color: #7d94a4;
+}
 #playlistRemove:hover{
   color:#fff;
 }
